--- a/index.html
+++ b/index.html
@@ -326,20 +326,20 @@
             
             <div class="feature-list">
                 <div class="feature-item">
-                    <div class="feature-title">Natural Language Search</div>
-                    <div class="feature-desc">Ask for files the way you'd ask a human. "Show me the report I worked on last week" or "Find the design mockups from Sarah."</div>
+                    <div class="feature-title">Search with Natural Language</div>
+                    <div class="feature-desc">Stop guessing filenames or trying to remember exact keywords. With Find, you can search the way you think. Just type something like “PDFs from last week,” “photos from Japan,” or “that spreadsheet John sent.” Find understands context and intent — so you don’t have to get it perfect to get it right.</div>
                 </div>
                 <div class="feature-item">
-                    <div class="feature-title">Universal File Support</div>
-                    <div class="feature-desc">Works with documents, images, spreadsheets, presentations, and more across all your cloud storage services.</div>
+                    <div class="feature-title">Eliminate Digital Clutter</div>
+                    <div class="feature-desc">No more digging through folders or bouncing between cloud apps. Find brings clarity to your digital workspace. It cuts through the noise and surfaces exactly what matters, helping you focus on getting things done — not finding things first.</div>
                 </div>
                 <div class="feature-item">
-                    <div class="feature-title">Content-Aware Results</div>
-                    <div class="feature-desc">Find understands what's in your files, not just filenames and metadata.</div>
+                    <div class="feature-title">Lightning Fast, Always Private</div>
+                    <div class="feature-desc">Find is built for speed and designed with privacy in mind. Results show up instantly, whether you're searching files on your computer or connected drives. Your data is never sold, tracked, or shared. Everything stays private — processed locally or securely encrypted in the cloud.</div>
                 </div>
                 <div class="feature-item">
-                    <div class="feature-title">Private & Secure</div>
-                    <div class="feature-desc">Your files and search queries stay private. We don't store or share your data.</div>
+                    <div class="feature-title">Works the Way You Work</div>
+                    <div class="feature-desc">Find integrates into your workflow naturally. Use keyboard shortcuts, apply smart filters, or save your favorite queries for quick access. It’s designed to stay out of your way — helping you move faster without changing the way you work.</div>
                 </div>
             </div>
         </div>
